--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,13 +6,11 @@ on:
     branches:
       - main
 
-# 允許 workflow 寫入部署
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# 避免並發部署
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -24,25 +22,22 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      # 步驟 1: 替換 URL 佔位符 (保持不變)
-      - name: Replace URL Placeholder 🔄
-        run: |
-          sed -i "s|APPS_SCRIPT_URL_PLACEHOLDER|${{ secrets.APPS_SCRIPT_URL }}|g" index.html
+      # *** 關鍵修復：使用更穩定的字串替換 Action ***
+      - name: Replace Apps Script URL Placeholder 🔄
+        uses: jacobtomlinson/gha-find-and-replace@v3
+        with:
+          find: "APPS_SCRIPT_URL_PLACEHOLDER"
+          replace: "${{ secrets.APPS_SCRIPT_URL }}"
+          include: "index.html"
       
-      # 步驟 2: 設定 GitHub Pages (*** 關鍵修復 ***)
       - name: Setup Pages ⚙️
         uses: actions/configure-pages@v5
-        with:
-          # 這一行強制 GitHub 在執行時啟用 Pages 功能，解決 "Not Found" 錯誤
-          enablement: true
 
-      # 步驟 3: 上傳部署產物
       - name: Upload artifact 📦
         uses: actions/upload-pages-artifact@v3
         with:
           path: '.'
 
-      # 步驟 4: 部署
       - name: Deploy to GitHub Pages 🚀
         id: deployment
         uses: actions/deploy-pages@v4
