--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,34 @@
-# .github/workflows/deploy.yml (最終、官方工具版)
-name: Deploy to GitHub Pages
+# .github/workflows/deploy.yml (最終、分離任務版)
+name: Build and Deploy to GitHub Pages
 
 on:
   push:
     branches:
       - main
 
+# 設定權限，允許 workflow 部署到 GitHub Pages
 permissions:
-  contents: write # 需要寫入權限來修改檔案
   pages: write
   id-token: write
 
+# 避免舊的 workflow 執行被新的覆蓋
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  # ==================================
+  # 任務一: 構建 (Build)
+  # ==================================
+  build:
     runs-on: ubuntu-latest
+    # 這個任務需要權限來讀取和修改檔案
+    permissions:
+      contents: write 
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      # *** 關鍵修復：使用官方 Script Action 進行替換 ***
       - name: Replace Apps Script URL Placeholder 🔄
         uses: actions/github-script@v7
         with:
@@ -35,15 +41,29 @@ jobs:
             fileContent = fileContent.replace('APPS_SCRIPT_URL_PLACEHOLDER', secretUrl);
             fs.writeFileSync(path, fileContent);
             console.log('Successfully replaced the placeholder URL.');
-            
+
       - name: Setup Pages ⚙️
         uses: actions/configure-pages@v5
-
+        
       - name: Upload artifact 📦
         uses: actions/upload-pages-artifact@v3
         with:
+          # 從根目錄上傳所有處理好的檔案
           path: '.'
 
+  # ==================================
+  # 任務二: 部署 (Deploy)
+  # ==================================
+  deploy:
+    # 這個任務需要 build 任務成功完成後才能開始
+    needs: build
+    
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+      
+    steps:
       - name: Deploy to GitHub Pages 🚀
         id: deployment
         uses: actions/deploy-pages@v4
